--- a/index.html
+++ b/index.html
@@ -20,23 +20,15 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
-            <li class="pokemon">
-                <span class="number">#001</span>
-                <span class="name">Bulbasaur</span>
-
-                <div class="detail">
-                    <ol class="types">
-                        <li class="type">grass</li>
-                        <li class="type">poison</li>
-                    </ol>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-                </div>
-            </li>
             <!-- Pokemons here -->
         </ol>
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">Load more...</button>
+        </div>
     </section>
 
     <!-- JavaScript -->
+    <script src="assets/js/pokemon-model.js"></script>
     <script src="assets/js/poke-api.js"></script> <!-- Declarar antes do main.js porque o objeto precisa ser definido antes de ser chamado -->
     <script src="assets/js/main.js"></script>
 </body>
